Share an icon set about industry theme.

--- a/packages/aicon/angular.json
+++ b/packages/aicon/angular.json
@@ -111,7 +111,7 @@
         }
       }
     },
-    "dot-aicon": {
+    "aicon": {
       "root": "lib",
       "projectType": "library",
       "prefix": "lx",
