--- a/packages/aicon/lib/package.json
+++ b/packages/aicon/lib/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@whale/dot-aicon",
-  "version": "0.0.1",
+  "name": "@whale/aicon",
+  "version": "1.0.0",
   "license": "MIT",
   "contributors": [
     "psw0msd <psw0msd@gmail.com>"
