--- a/packages/bicon/package.json
+++ b/packages/bicon/package.json
@@ -91,5 +91,6 @@
       "<rootDir>/node_modules/",
       "<rootDir>/.cache/"
     ]
-  }
+  },
+  "gitHead": "512105f9710860dd6dcdffc581759f0309f6cd5c"
 }
