--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dot-icon",
-  "private": true,
+  "private": false,
   "scripts": {
     "ins": "lerna bootstrap --registry=https://registry.npm.taobao.org",
     "test": "lerna run --scope @whale/bicon test",
