--- a/packages/aicon/package.json
+++ b/packages/aicon/package.json
@@ -7,7 +7,7 @@
     "make": "cross-env TS_NODE_PROJECT=maker/tsconfig.json node --require ts-node/register maker/index.ts",
     "build:lib": "ng build aicon"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
