--- a/packages/aicon/doc/tsconfig.app.json
+++ b/packages/aicon/doc/tsconfig.app.json
@@ -9,10 +9,10 @@
     "**/*.spec.ts"
   ],
   "paths": {
-    "@whale/aicon": [
+    "@lxtech/aicon": [
       "../lib/public_api"
     ],
-    "@whale/aicon/icons": [
+    "@lxtech/aicon/icons": [
       "../lib/icons/public_api"
     ]
   }
