--- a/packages/aicon/tsconfig.json
+++ b/packages/aicon/tsconfig.json
@@ -19,10 +19,10 @@
       "dom"
     ],
     "paths": {
-      "@whale/aicon": [
+      "@lxtech/aicon": [
         "lib/public_api"
       ],
-      "@whale/aicon/icons": [
+      "@lxtech/aicon/icons": [
         "lib/icons/public_api"
       ]
     }
